2010-08-19  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* backend/cimxml/client.c:
	Fixed 3043288: XML generated with VALUE.ARRAY for ref arrays

	Fixed 3043282: XML gen for embedded instances for invokeMethod is incorrect

2010-04-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* backend/cimxml/client.c:
	Fixed 2982349: Memory leak in backend/cimxml/client.c
	(patch by Suresh Sundriyal)

	* backend/cimxml/property.c:
	Fixed 2982352: Double free in backend/cimxml/property.c
	(patch by Suresh Sundriyal)
	
2009-09-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* backend/cimxml/cimXmlParser.h:
	Fixed 2849853: getClass reports most property types as CMPI_Instance
	(patch by Klaus Kampf)

2009-09-02  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* backend/cimxml/client.c
	Fixed 2847782: sfcc getClass crashes if cimom isn't running
	(patch by Klaus Kämpf)

2009-08-19  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* backend/cimxml/grammar.c:
	Fixed 2691478: sfcc 2.1.0 cannot handle OutParams on Extrinsic 
	Method Call
	(patch by Rajib Saha)

2009-02-13  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* TEST/v2test_ei.c:
	Fixed 2596921: v2test_ei test fails when using CIMXML interface

2008-12-16  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* cimc/cimclient.c:
	Fixed 2431835: XML client library not found. 

2008-11-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* TEST/*.c, backend/cimxml/indicationlistener.c:
	Fixed 2270179: Missing includes and values in return statements
	(patch by Pavol Rusnak)
	
2008-10-27  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* Makefile.am 
	Updated 2158091: sfcb modules belong in private dir
		use $libdir for default

2008-10-23  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* Makefile.am configure.ac cimc/cimcclient.c
	Fixed 2158091: sfcb modules belong in private dir

2008-09-09  Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimc/cimcft.h: