@@ -1,3 +1,8 @@
+2010-09-07  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* cimc/cimcft.h:
+	Fixed 3059060: 'struct _CIMCArgsFT' not defined in cimc/cimcft.h
+
 2010-08-19  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* backend/cimxml/client.c:
